fix page overflow

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,9 @@
 .app-section {
   background:#efefe9;
-}
-
-section {
-  height: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  overflow: auto;
 }
