--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,3 @@
 @import "assets/css/style.scss";
 @import "assets/css/form.scss";
 @import "assets/css/loading-bars.scss";
-
-body {
-  height: 750px;
-}
